--- a/modules/sheval/CMakeLists.txt
+++ b/modules/sheval/CMakeLists.txt
@@ -1,21 +1,21 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
-project(jgcsh_shntax 
+project(jgcsh_sheval 
   LANGUAGES CXX
   DESCRIPTION "A parser for shell syntax."
   VERSION 0.1.0
 )
 
-add_library(jgcsh_lned
+add_library(jgcsh_sheval
   src/lned.cpp
 )
-add_library(jgcsh::lned ALIAS jgcsh_lned)
+add_library(jgcsh::sheval ALIAS jgcsh_sheval)
 
-set_target_properties(jgcsh_lned PROPERTIES
+set_target_properties(jgcsh_sheval PROPERTIES
   CXX_STANDARD 17
   CXX_STANDARD_REQUIRED true
 )
 
-target_include_directories(jgcsh_lned
+target_include_directories(jgcsh_sheval
   PUBLIC include
   PRIVATE src
 )
