Realize I don't need lexy.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,11 @@ set_target_properties(jgcsh PROPERTIES
 )
 
 target_link_libraries(jgcsh
-  PRIVATE jgcsh::lned
+  PRIVATE jgcsh::lned jgcsh::sheval
+)
+
+target_link_libraries(jgcsh_sheval
+  PRIVATE foonathan::lexy
 )
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS true)
